--- a/scss/elements/_all.scss
+++ b/scss/elements/_all.scss
@@ -1,15 +1,15 @@
 @charset "utf-8";
 
-@import "box.sass";
-@import "button.sass";
-@import "content.sass";
-@import "form.sass";
-@import "icon.sass";
-@import "image.sass";
-@import "notification.sass";
-@import "progress.sass";
-@import "table.sass";
-@import "tag.sass";
-@import "title.sass";
+@import "box";
+@import "button";
+@import "content";
+@import "form";
+@import "icon";
+@import "image";
+@import "notification";
+@import "progress";
+@import "table";
+@import "tag";
+@import "title";
 
-@import "other.sass";
+@import "other";
